# pyQuadriFlow

./: .gitmodules  BINDINGS.md  CMakeLists.txt  README.md  ctypes_QuadriFlow.cpp  pyproject.toml
.github/workflows/: build.yml  deploy-site.yml
docs/: generate_demo.py  template.html
package/: pyproject.toml  setup.py
package/src/pyQuadriFlow/clib/: load_library.py
src/: _pyquadriflow.cpp  pipeline.cpp  pipeline.h
src/pyquadriflow/: __init__.py  quadriflow.py
tests/: test_quadriflow.py
