[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "Andrea Pozzetti"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy"
]
description = "Python bindings for QuadriFlow quad-dominant remeshing"
name = "pyquadriflow"
readme = "readme.md"
requires-python = ">=3.10"
version = "0.2.0"

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/pyQuadriFlow"
"Bug Reports" = "https://github.com/PozzettiAndrea/pyQuadriFlow/issues"
"Source Code" = "https://github.com/PozzettiAndrea/pyQuadriFlow"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*musllinux* *i686*"
test-command = "python -c \"import pyquadriflow; print(pyquadriflow.quadriflow_remesh); print('OK')\""
test-requires = "numpy"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y eigen3-devel boost-devel || apt-get install -y libeigen3-dev libboost-dev || true"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "11.0"}
before-all = "brew install eigen boost"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "vcpkg install eigen3:x64-windows boost-graph:x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
environment = {CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"}

[tool.scikit-build]
wheel.py-api = "cp312"
cmake.build-type = "Release"
